[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs"] }
webrtc = "0.17.1"
